---
source: crates/vicuna-compiler/src/parser.rs
expression: "expr().parse(\"10 / 11 / 12\")"
---
Ok:
  - Binary:
      - - Divide
        - start: 8
          end: 10
      - - Binary:
            - - Divide
              - start: 3
                end: 5
            - - Value:
                  I32: 10
              - start: 0
                end: 2
            - - Value:
                  I32: 11
              - start: 5
                end: 7
        - start: 0
          end: 7
      - - Value:
            I32: 12
        - start: 10
          end: 12
  - start: 0
    end: 12

